# alpha-juinor

./: .env.example  .gitignore  .pre-commit-config.yaml  ACTION_PLAN_ELITE_TIER.md  ALPACA_FIX_COMPLETE.md  ALPACA_INTEGRATION_COMPLETE.md  ALPACA_NOW_TRADING.md  ALPACA_TRADING_GUIDE.md  COMMANDS.bat  COMMAND_REFERENCE.md  COMPETITIVE_GAPS_ANALYSIS.md  COMPLETE_ERROR_FIX_REPORT.md  COMPLETE_EXECUTION_GUIDE.md  COMPLETE_FEATURE_INDEX.md  COMPLETE_IMPLEMENTATION_REPORT.md  COMPLETE_SYSTEM_SUMMARY.md  COMPLETION_REPORT.md  COMPREHENSIVE_VERIFICATION_REPORT.md  CRITICAL_ANALYSIS_V3.md  DAEMON_README.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_GUIDE_ELITE.md  DEPLOYMENT_READY.md  DEPLOYMENT_VERIFICATION.md  Dockerfile  ERROR_FIX_REPORT.md  FINAL_AUDIT_REPORT.md  FINAL_PROJECT_STATUS.md  FIXED_run_247.py  HONEST_STATUS_REPORT.md  HOW_TO_RUN_FULL_PROJECT.md  HOW_TO_RUN_FULL_SYSTEM.md  HUGEFUNDS_MASTER_PROMPT.md  HUGEFUNDS_SYSTEM_SUMMARY.md  HYBRID_TRADING_SUMMARY.md  INSTITUTIONAL_ARCHITECTURE.md  INSTITUTIONAL_ARCHITECTURE_SPECIFICATION.md  INSTITUTIONAL_COMPLETION_REPORT.md  LIVE_MONITORING_ARCHITECTURE.md  (+171 more)
.github/: CODE OWNERS
agents/: alpha_router.py  decision_agent.py  institutional_decision_agent.py  llm_trade_analyzer.py  meta_brain.py  portfolio_agent.py  risk_agent.py  sentiment_agent.py
allocator/: meta_controller.py
alpha/: __init__.py  elite_factor_library.py  llm_sentiment_alpha.py  network_alpha.py  validated_alpha.py
alpha_agents/: alternative_advanced.py  base_agent.py  fundamentals.py  registry.py  specialized_micro.py  statistical_fundamental.py  technical.py
alpha_families/: __init__.py  agent_runner.py  alternative_alpha.py  base_alpha.py  defensive_quality.py  enhanced_alpha_pipeline.py  full_market_alpha.py  fundamental_alpha.py  mean_reversion.py  ml_alpha.py  momentum.py  momentum_ts.py  normalization.py  registry.py  sentiment_alpha.py  statistical_alpha.py  trend_strength.py  volatility_carry.py
alpha_junior/: .env.example  14_TRADING_STRATEGIES.md  ACTIVATE_TRADING.bat  AI_AUTONOMOUS_GUIDE.md  ALPACA_INTEGRATION_SUMMARY.md  COMPLETE_SETUP_GUIDE.md  ELITE_HEDGE_FUND_GUIDE.md  FINAL_CHECKLIST.md  INSTITUTIONAL_LAUNCHER.bat  LIVE_MONITOR.bat  ONE_CLICK_RUN.bat  PROJECT_COMPLETE.md  PROJECT_COMPLETE_v2.md  QUICKSTART.md  README.md  README_24_7.md  README_FINAL.md  RUN_FULLY.bat  START_24_7_TRADING.bat  THE_MASTERPIECE.md  TOP_1_PERCENT_INSTITUTIONAL.md  TRADING_GUIDE.md  VERIFY_AND_RUN.bat  VISUAL_GUIDE.md  WHAT_IT_DOES.md  WORLD_CLASS_LAUNCHER.bat  add_to_startup.bat  alpha_junior_service.py  app.py  autonomous_trader.py  bloomberg_terminal.py  brain.py  docker-compose.yml  elite_hedge_fund.py  install_service.bat  institutional_core.py  institutional_portfolio.py  institutional_traders.py  institutional_traders_v2.py  manage.bat  (+18 more)
alternative_data/: __init__.py  engine.py
analytics/: __init__.py  metrics.py  pnl_attribution.py
audit/: __init__.py  decision_log.py  decision_recorder.py
backtest/: backtester.py  engine.py  execution.py  execution.py_new_head.py  execution_simulator.py  portfolio.py  registry.py  scenario_runner.py
benchmarks/: fpga_performance.py  latency_async.py  latency_baseline.py  latency_final.py  latency_performance.py  latency_profiler.py  stress_test_institutional.py  throughput_test.py
brokers/: alpaca_broker.py  ccxt_broker.py  ib_broker.py  mock_broker.py  multi_prime_brokerage.py
cemetery/: results_log.json
ci/: promote_model.py
compliance/: audit_trail.py  compliance_engine.py  regulatory_automation.py  regulatory_reporter.py
config/: development.yaml  ml_config.py  paper_trading.json  production.json  production.yaml  provider_capabilities.yaml  secrets_manager.py
configs/: config_manager.py  full_market.yaml  golden_config.yaml  providers.yaml  universe.json
contracts/: __init__.py  alpha_contract.py  base_agent.py
control/: prepare_training_data.py
cuda/: tick_transformer.cu
data/: alpaca_provider.py  alternative_data.py  global_universe.py  ingestion_agent.py  provider.py  quality.py  rate_limiter.py  storage.py  universe_manager.py  validator.py
data_intelligence/: confidence_agent.py  data_confidence.py  data_state_machine.py  provider_arbitrator.py  provider_bandit.py  provider_confidence_agent.py  provider_health.py  provider_quota_manager.py  quality_agent.py  quarantine_manager.py  validation_gateway.py
database/: __init__.py  manager.py  postgres_config.py  schema.py
demo/: __init__.py  full_system_demo.py
derivatives/: __init__.py  volatility_surface.py
distributed/: cluster_manager.py
docker/: docker-compose.yml
docs/: ARCHITECTURE.md  DECISION_BOUNDARIES.md  DECISION_FLOW.md  DEPLOYMENT_CHECKLIST.md  ELITE_RISK_GAP_ANALYSIS.md  ELITE_ROADMAP.md  HFT_TRADING_GUIDE.md  HIGH_PERFORMANCE_STACK.md  INSTITUTIONAL_DEPLOYMENT_GUIDE.md  PAPER_TRADING_TESTING_GUIDE.md  PM_BRAIN_MATH.md  PRODUCTION_DEPLOYMENT_GUIDE.md  RUN_BOOK.md  STRATEGY_SPECIFICATION.md  TRANSITION_TO_LIVE_TRADING.md  ULTRA_LOW_LATENCY_ARCHITECTURE.md  USER_INTERFACE.md  false_production_signals.md  hardening.md  setup.md  stress_gate_integration.md
ebpf/: xdp_market_filter.c
elite_quant_fund/: README.md  __init__.py  requirements.txt  system.py
engine/: analytics.py  live_engine.py  market_listener.py  streaming_engine.py
mini_quant_fund/: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  roadmap.json
mini_quant_fund/config/: universe.yaml
mini_quant_fund/data_intelligence/: bandit.py  contracts.py  ingestion.py  providers.py  quality_agent.py
mini_quant_fund/db/: models.py
mini_quant_fund/execution_intelligence/: engine.py
mini_quant_fund/intelligence/: feature_store.py  governance.py  regime.py  representation.py  shadow.py  tail_risk.py
mini_quant_fund/meta_intelligence/: pm_brain.py
mini_quant_fund/monitoring/: alerts.py  audit.py
mini_quant_fund/portfolio/: allocator.py
mini_quant_fund/tests/: chaos_test.py  test_allocator.py  test_pm_brain.py
rust/hot_paths/: Cargo.toml
rust/hot_paths/src/: lib.rs  orderbook.rs  tick_buffer.rs
(+2600 files in other folders)
