[project]
name = "nexus-quant"
version = "1.0.0"
description = "Institutional-grade quantitative trading platform"
authors = [
    {name = "Institutional Quant Team"}
]
dependencies = [
    "fastapi",
    "uvicorn",
    "streamlit",
    "pandas",
    "numpy",
    "scipy",
    "httpx",
    "numba",
    "aiohttp",
    "python-dotenv",
    "pydantic",
    "requests"
]
requires-python = ">=3.9"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.pyright]
include = ["nexus"]
executionEnvironments = [
  { root = "." }
]

[tool.setuptools]
package-dir = {"" = "."}
packages = ["nexus"]
