[project]
name = "mini_quant_fund"
version = "0.1.0"
description = "Institutional-grade autonomous trading architecture"
authors = ["Antigravity <antigravity@google.com>"]
readme = "README.md"
requires-python = ">=3.11"

[project.dependencies]
pydantic = "^2.0.0"
sqlalchemy = "^2.0.0"
alembic = "^1.11.0"
pandas = "^2.0.0"
numpy = "^1.24.0"
scikit-learn = "^1.3.0"
lightgbm = "^4.0.0"
torch = "^2.0.0"
fastapi = "^0.100.0"
uvicorn = "^0.23.0"
structlog = "^23.1.0"
pyyaml = "^6.0.0"
aiohttp = "^3.8.0"
yfinance = "^0.2.0"
redis = "^5.0.0"
rq = "^1.15.0"
psycopg2-binary = "^2.9.0"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "black",
    "ruff"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
