[package]
name = "mqf-hot-paths"
version = "1.0.0"
edition = "2021"
authors = ["MiniQuantFund Engineering <engineering@miniquant.fund>"]
description = "Ultra-low latency hot paths for MiniQuantFund trading system"
license = "Proprietary"

[lib]
name = "mqf_hot_paths"
crate-type = ["cdylib", "staticlib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
numpy = "0.20"
crossbeam = "0.8"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[dependencies.uuid]
version = "1.6"
features = ["v4", "fast-rng"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
target-cpu = "native"

[profile.dev]
opt-level = 0
debug = true
